--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sliver_row
-description: "Sliver Row"
+description: "Sliver"
 version: 0.0.1
 homepage:
 
@@ -14,6 +14,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: any
+  flutter_lints: any
 
 flutter:
