--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: custom_sliver_row
 description: "Custom Sliver Row arranges children in a CustomScrollView, replacing SliverCrossAxisGroup on Flutter <3.10."
 version: 1.0.0
-homepage:
+homepage: https://github.com/DemienIlnutskiy/flutter_custom_sliver_row
 
 environment:
   sdk: '>=2.12.0 <4.0.0'
